# transdoc-python

./: README.md  pyproject.toml
.github/workflows/: publish.yml  python-app.yml
tests/: python_test.py
transdoc_python/: __init__.py
