[project]
name = "transdoc-python"
version = "0.1.0"
description = "A Transdoc handler for Python docstrings"
authors = [{ name = "Maddy Guthridge", email = "hello@maddyguthridge.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Keeping it like this until I release a stable version
    "libcst (>=1.6.0,<2.0.0)",
    "transdoc @ file:///home/maddy/Source/transdoc",
]

[project.entry-points.'transdoc.handlers']
python = 'transdoc_python:TransdocPythonHandler'

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
mypy = "^1.14.1"
pytest = "^8.3.4"
jestspectation = "^1.4.5"

[tool.poetry]
include = ["py.typed"]

# Temporary while I debug things
[tool.poetry.dependencies]
python = ">=3.12"
transdoc = { develop = true }

[tool.mypy]
check_untyped_defs = true
files = ["transdoc_python"]

[tool.ruff]
line-length = 79

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "return NotImplemented",
    "@overload",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
